change detect charset in User Provide > System Default > Standard Charset > Available Charsets